<resources>
    <string name="app_name">Fire Chat</string>
    <string name="email_hint">Email</string>
    <string name="nick_hint">Nickname</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">Or...</string>
    <string name="sample">Lorem ipsum dolor simt...</string>
    <string name="sample_long">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et </string>
</resources>
