<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ProgressBar
            android:id="@+id/fragment_register_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:id="@+id/fragment_register_nick_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_hint"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:id="@+id/fragment_register_email_field"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/fragment_register_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/password_hint"/>
        <Button
            android:id="@+id/fragment_register_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/or"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/fragment_register_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>